code/tui/src/app/snapshots/app__conversation_flow_tests__conversation_streaming.snap
---
source: code/tui/src/app/conversation_flow_tests.rs
expression: render(&app)
---
  .                                                                            [— / —] [Dashboard]

> 请 正 常 回 复 ， 并 展 示 多 行 输 出 。

● 你 好 ！ 普 通 对 话




















⠋ Working · 0m 00s total · ctrl+c to interrupt
  ⏸ ask permissions on                                                   shift+tab to cycle policy
  ────────────────────────────────────────────────────────────────────────────────────────────────
  >
  ─────────────────────────────────────────────────────────────────────────────── Automatic model

  Enter queue  ·  shift+tab permissions
